<resources>
    <string name="app_name">ShoopingList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="common_item">This is a common item</string>
    <string name="idk">IDK</string>
    <string name="_10">10</string>
    <string name="_15_5">15.5</string>
    <string name="checkmark">✓</string>
    <string name="item_list_checkmark">Item list checkmark</string>
    <string name="LoginButtonText">Login</string>
    <string name="new_item_name">Name</string>
    <string name="new_item_amount">Amount</string>
    <string name="new_item_value">Value</string>
    <string name="popup_button_add">Add</string>
    <string name="popup_button_cancel">cancel</string>
    <string name="LogoutButtonText">Logout</string>
    <string name="item_image">Item Image</string>
    <string name="id">ID</string>
    <string name="Share">Share</string>
</resources>