<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_item_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/default_item_height"
    android:layout_marginBottom="1dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/checkmark_image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/xmark"
        android:contentDescription="@string/item_list_checkmark" />

    <TextView
        android:id="@+id/common_item_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/common_item" />

    <TextView
        android:id="@+id/common_item_amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:text="@string/_10" />

    <TextView
        android:id="@+id/common_item_value"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:text="@string/_15_5" />

</LinearLayout>


