<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_text_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/popup_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/new_item_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/popup_item_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:hint="@string/new_item_amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/popup_item_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:hint="@string/new_item_value"
        android:inputType="number" />

</LinearLayout>
